allprojects {

    repositories {
        mavenCentral()
    }

    apply plugin: 'java'
    //apply plugin: 'maven'

    group 'liquer.alchemy'
    version = '1.0.0-SNAPSHOT'

    sourceCompatibility = 11
    targetCompatibility = 11

    dependencies {
        //testImplementation 'junit.jupiter:junit-jupiter-engine:5.8.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
        implementation 'xalan:serializer:2.7.2'
        implementation 'org.slf4j:jul-to-slf4j:1.7.32'
        implementation 'ch.qos.logback:logback-classic:1.2.7'
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << '-Xlint:unchecked'
        options.deprecation = true
        options.encoding = 'UTF-8'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
    /*
    task writeNewPom {

        doLast {
            pom {
                project {
                    inceptionYear '2008'
                    licenses {
                        license {
                            name 'The Apache Software License, Version 2.0'
                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                            distribution 'repo'
                        }
                    }

                    properties {
                        java {
                            version '1.8'
                        }
                        maven {
                            compiler {
                                source '${java.version}'
                                target '${java.version}'
                            }
                        }
                        project {
                            build {
                                sourceEncoding 'UTF-8'
                            }
                        }

                    }
                }

            }.writeTo("pom.xml")
        }
    } */
}


gradle.buildFinished {
    project.buildDir.deleteDir()
}